<resources>
    <string name="app_name">BuildBoard</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_length">Password must have at-least 6 characters</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_in">Sign In</string>
    <string name="contractor">Contractor</string>
    <string name="consumer">Consumer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone no</string>
    <string name="preferred_contact_mode">Preferred contact mode</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">other</string>
    <string name="type_of_contractor">Type of contractor</string>
    <string name="working_area">Working area/radius</string>
    <string name="privacy_policy_text">By signing up, you agree with the Terms of Service and Privacy Policy</string>
    <string name="next">Next</string>
    <string name="by_signing_up">By signing up, you agree with the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="quote_this_project">Quote This Project</string>
    <string name="brief_summary_of_your_company">Brief summary of your company…</string>
    <string name="user_type">User Type</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_type">Card Type</string>
    <string name="city">City</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">Cvv</string>
    <string name="name_on_card">Name on Card</string>
    <string name="skip">SKIP</string>
    <string name="expire">Expire</string>
    <string name="description">Description</string>
    <string name="startdate">Start Date</string>
    <string name="show_on_map">Show on Map</string>
    <string name="enddate">End Date</string>
    <string name="no_attachmets">No Attachments</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="trash_message_title">Trash Message</string>
    <string name="trash">Trash</string>
    <string name="text_refresh">Refresh</string>
    <string name="trash_message_message">Do you want move this chat to Trash?</string>
    <string name="trash_message_positive_text">Trash</string>
    <string name="msg_enter_email_address">Enter Your Email Address</string>
    <string name="msg_reset_password">Please enter your registered email address and we’ll send you a link to reset password.</string>
    <string name="error_password">Please enter password</string>
    <string name="error_old_password">Please enter old password</string>
    <string name="error_new_password">Please enter new password</string>
    <string name="error_confirm_password">Please enter confirm password</string>
    <string name="error_username">Please enter username</string>
    <string name="error_username_short">Username must have at-least 3 characters</string>
    <string name="error_select_user_type">Please select user type</string>
    <string name="error_enter_name">Please enter name</string>
    <string name="error_enter_first_name">Please enter first name</string>
    <string name="error_enter_last_name">Please enter last name</string>
    <string name="error_enter_address">Please enter address</string>
    <string name="error_enter_phone_number">Please enter phone number</string>
    <string name="error_enter_city">Please enter city</string>
    <string name="error_enter_email">Please enter email</string>
    <string name="error_enter_valid_email">Please enter valid email</string>
    <string name="error_enter_business_name">Please enter business name</string>
    <string name="error_enter_business_address">Please enter business address</string>
    <string name="error_enter_summary">Please enter summary</string>
    <string name="error_enter_card_name">Please enter name on card</string>
    <string name="error_enter_card_number">Please enter card number</string>
    <string name="error_enter_expire_date">Please enter expire date</string>
    <string name="error_enter_cvv">Please enter Cvv number</string>
    <string name="send_email">Send Email</string>
    <string name="error_first_name_short">First name must have at-least 3 characters</string>
    <string name="error_last_name_short">Last name must have at-least 3 characters</string>
    <string name="error_user_type">Please select user type</string>
    <string name="error_working_area">Please select working area</string>
    <string name="error_summary">Please enter summary</string>
    <string name="name">Name</string>
    <string name="error_enter_valid_phone_number">Phone Number must have between 9 to 15 digit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_marketplace">Marketplace</string>
    <string name="title_projects">Projects</string>
    <string name="title_projects_desc">Project Details</string>
    <string name="title_mailbox">Mailbox</string>
    <string name="title_profile">Profile</string>
    <string name="trending_services">Top Rated/Trending Contractors</string>
    <string name="near_by_contractors">Nearby Contractors</string>
    <string name="contractors_by_project_type">Contractors by Project Type</string>
    <string name="create_new_projects">Create New Project</string>
    <string name="new_projects">New Projects</string>
    <string name="completed_projects">Completed\nProjects</string>
    <string name="open_projects">Open\nProjects</string>
    <string name="lost_projects">Lost\nProjects</string>
    <string name="saved_projects">Saved\nProjects</string>
    <string name="current_projects">Current\nProjects</string>
    <string name="item_projecttype_title">Project\u0020Type:</string>
    <string name="item_projectname_title">Project\u0020Name:</string>
    <string name="item_projectvalue_title">Contract\u0020Value:</string>
    <string name="no_projects">No\u0020Projects</string>
    <string name="item_project_completiondate_title">Project\u0020Completion\u0020Date:</string>
    <string name="open_projects_subtitle">Following projects have been posted to marketplace.</string>
    <string name="open_quotes_subtitle">Following projects are open for quotes</string>
    <string name="lost_projects_subtitle">Following\u0020projects\u0020have\u0020been\u0020lost</string>
    <string name="lost_quotes_subtitle">Following quote have been lost</string>
    <string name="current_projects_subtitle">Following\u0020projects\u0020are\u0020in\u0020progress.</string>
    <string name="saved_projects_subtitle">Following\u0020projects\u0020have\u0020been\u0020saved</string>
    <string name="saved_quotes_subtitle">Following quotes have been saved</string>
    <string name="completed_projects_subtitle">Following\u0020projects\u0020have\u0020been\u0020completed.</string>
    <string name="no_internet_text">Internet Connection is not available</string>
    <string name="open_project">Open Projects</string>
    <string name="saved_project">Saved Projects</string>
    <string name="lost_project">Lost Projects</string>
    <string name="open_quotes">Open Quotes</string>
    <string name="saved_quotes">Saved Quotes</string>
    <string name="lost_quote">Lost\nQuotes</string>
    <string name="open_quote">Open\nQuotes</string>
    <string name="saved_quote">Saved\nQuotes</string>
    <string name="lost_quotes">Lost Quotes</string>
    <string name="inbox">Inbox</string>
    <string name="quotes">Quotes</string>
    <string name="draft">Draft</string>
    <string name="drafts">Drafts</string>
    <string name="bin">Trash</string>
    <string name="compose">Compose</string>
    <string name="text">text</string>
    <string name="send">Send</string>
    <string name="facebook_app_id">507994589631622</string>
    <string name="fb_login_protocol_scheme">fb507994589631622</string>
    <string name="write_message">Write message</string>
    <string name="message_sent">Message sent</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="contractors">Contractors</string>
    <string name="by_project_type">by project type</string>
    <string name="view_all"><u>View all</u></string>
    <string name="no_records_found">No records found</string>
    <string name="no_chat_yet">Send your first message</string>
    <string name="no_trash_yet">No trash found</string>
    <string name="error_contractor_type">Please select Contractor Type</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_no_data_found">No Data Found</string>
    <string name="trending_projects">Trending Projects</string>
    <string name="near_by_projects">Nearby Projects</string>
    <string name="projects_on_marketplace">Projects on marketplace</string>
    <string name="browse_projects_by_projectstype">Browse Projects By Projects Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_out_for_bid">Project Out For Bid</string>
    <string name="current_project">Current Projects</string>
    <string name="completed_project">Completed Projects</string>
    <string name="view_on_map"><u>View On Map</u></string>
    <string name="my_contractors">My Contractors</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="phone">Phone</string>
    <string-array name="array_working_area">
        <item>0 - 10 miles</item>
        <item>11 - 20 miles</item>
        <item>21 - 30 miles</item>
        <item>31 - 40 miles</item>
        <item>41 - 50 miles</item>
        <item>51 - 60 miles</item>
        <item>61 - 70 miles</item>
        <item>71 - 80 miles</item>
        <item>81 - 90 miles</item>
        <item>91 - 100 miles</item>
    </string-array>
    <string name="reset_password">Reset Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="error_network">The internet seems to be down</string>
    <string name="please_enter">Please enter </string>
    <string name="password_did_not_match">Confirm password did not match</string>
    <string name="eight_char">Password must contain at-least 8 characters</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage_payment_method">Manage Payment Method</string>
    <string name="payment">Payment</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>