<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_marketplace" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_mailbox"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mailbox" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>
