<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/constraint_root"
    tools:context="com.buildboard.modules.paymentdetails.PaymentDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp">

        <EditText
            android:id="@+id/edit_name"
            style="@style/edittext_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_address"
            style="@style/edittext_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_city"
            style="@style/edittext_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:hint="@string/city"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/edit_address" />

        <EditText
            android:id="@+id/edit_card_type"
            style="@style/edittext_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:text="@string/card_type"
            app:layout_constraintTop_toBottomOf="@+id/edit_city" />

        <EditText
            android:id="@+id/edit_card_number"
            style="@style/edittext_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:hint="@string/card_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="19"
            app:layout_constraintTop_toBottomOf="@+id/edit_card_type" />

        <EditText
            android:id="@+id/edit_expire"
            style="@style/edittext_style"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:hint="@string/expire"
            android:imeOptions="actionNext"
            android:inputType="date"
            app:layout_constraintHorizontal_weight=".5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/edit_cvv"
            app:layout_constraintTop_toBottomOf="@+id/edit_card_number" />

        <EditText
            android:id="@+id/edit_cvv"
            style="@style/edittext_style"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:hint="@string/cvv"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintHorizontal_weight=".5"
            app:layout_constraintLeft_toRightOf="@+id/edit_expire"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_card_number" />

        <EditText
            android:id="@+id/edit_name_on_card"
            style="@style/edittext_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_border"
            android:hint="@string/name_on_card"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/edit_expire" />

        <Button
            android:id="@+id/button_next"
            style="@style/button_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/gray_button_background"
            android:text="@string/next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name_on_card" />

        <TextView
            android:id="@+id/text_skip"
            style="@style/textSize_small"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
