<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.buildboard.modules.signup.SignUpContractorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_25sdp"
        android:paddingBottom="@dimen/_25sdp"
        android:paddingRight="@dimen/_25sdp"
        android:paddingTop="@dimen/_15sdp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_first_name"
            style="@style/textinputlayout_style"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edit_first_name"
                style="@style/edittext_style"
                android:imeOptions="actionNext"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_last_name"
            style="@style/textinputlayout_style"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_first_name">

            <EditText
                android:id="@+id/edit_last_name"
                style="@style/edittext_style"
                android:imeOptions="actionNext"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_gender"
                android:overlapAnchor="false"
                style="@style/OverflowMenu"
                app:layout_constraintTop_toBottomOf="@+id/textinputlayout_last_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_email"
            style="@style/textinputlayout_style"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender">

            <EditText
                android:id="@+id/edit_email"
                style="@style/edittext_style"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_password"
            style="@style/textinputlayout_style"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                style="@style/edittext_style"
                android:imeOptions="actionNext"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/edit_contractor_type"
            android:text="@string/type_of_contractor"
            style="@style/edittext_style"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:onClick="openContractorTypeSelection"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_business_name"
            style="@style/textinputlayout_style"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_contractor_type">

            <EditText
                android:id="@+id/edit_business_name"
                style="@style/edittext_style"
                android:imeOptions="actionNext"
                android:hint="@string/business_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_business_address"
            style="@style/textinputlayout_style"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_business_name">

            <EditText
                android:id="@+id/edit_business_address"
                style="@style/edittext_style"
                android:imeOptions="actionDone"
                android:hint="@string/business_address"
                android:inputType="textPostalAddress" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/edit_working_area"
            android:text="@string/working_area"
            style="@style/edittext_style"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:onClick="openWorkingAreaSelection"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_business_address"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_summary"
            style="@style/textinputlayout_style"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_working_area">

            <EditText
                android:id="@+id/edit_summary"
                style="@style/edittext_style"
                android:maxLines="5"
                android:singleLine="false"
                android:hint="@string/brief_summary_of_your_company" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login_google"
            style="@style/button_style"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/gray_button_background"
            android:text="@string/next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_summary" />

        <TextView
            android:id="@+id/text_terms_of_service"
            android:text="@string/privacy_policy"
            android:autoLink="all"
            android:linksClickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_google"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>