<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buildboard.modules.signup.SignUpActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp">

            <com.buildboard.customviews.BuildBoardEditText
                android:id="@+id/edit_first_name"
                style="@style/edit_text_size_small"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/green_drawable_border"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                app:typeface="robotoRegular" />

            <com.buildboard.customviews.BuildBoardEditText
                android:id="@+id/edit_last_name"
                style="@style/edit_text_size_small"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/green_drawable_border"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/edit_first_name"
                app:typeface="robotoRegular" />

            <com.buildboard.customviews.BuildBoardEditText
                android:id="@+id/edit_email"
                style="@style/edit_text_size_small"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/green_drawable_border"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/edit_last_name"
                app:typeface="robotoRegular" />

            <com.buildboard.customviews.BuildBoardEditText
                android:id="@+id/edit_password"
                style="@style/edit_text_size_small"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/green_drawable_border"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/edit_email"
                app:typeface="robotoRegular" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_consumer_address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_password">

                <com.buildboard.customviews.BuildBoardTextView
                    android:id="@+id/edit_address"
                    style="@style/edit_text_size_small"
                    android:background="@drawable/green_drawable_border"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    app:typeface="robotoRegular" />

                <com.buildboard.customviews.BuildBoardEditText
                    android:id="@+id/edit_phoneno"
                    style="@style/edit_text_size_small"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/green_drawable_border"
                    android:hint="@string/phone_no"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="14"
                    app:layout_constraintTop_toBottomOf="@+id/edit_address"
                    app:typeface="robotoRegular" />

                <com.buildboard.customviews.BuildBoardEditText
                    android:id="@+id/edit_contact_mode"
                    style="@style/edit_text_size_small"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/green_drawable_border"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:focusable="false"
                    android:text="@string/preferred_contact_mode"
                    app:layout_constraintTop_toBottomOf="@+id/edit_phoneno"
                    app:typeface="robotoRegular" />

            </android.support.constraint.ConstraintLayout>

            <com.buildboard.customviews.BuildBoardButton
                android:id="@+id/button_next"
                style="@style/button_style"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/gray_button_background"
                android:text="@string/next"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_consumer_address_container"
                app:typeface="robotoRegular" />

            <com.buildboard.customviews.BuildBoardTextView
                android:id="@+id/text_terms_of_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:autoLink="all"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/privacy_policy_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_next"
                app:typeface="robotoRegular" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>